--- a/form.css
+++ b/form.css
@@ -4,7 +4,6 @@
 
 body{
   background-color: white;
-  /* background-color: rgb(172, 233, 237); */
   color: white;
   line-height: 1.6;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -21,7 +20,7 @@ body{
 
 .alert{
   text-align: center;
-  background: rgb(0, 80, 67);
+  background: rgb(13, 161, 172);
   color: white;
   font-size: 1.2em;
   padding: 10px;
@@ -44,11 +43,11 @@ span{
   color: rgb(2, 59, 163);
   margin: 0 0 1rem 0;
   background-color: white;
-  box-shadow: 0 0 20px 5px rgb(100, 100, 100);
+  box-shadow: 0 0 20px 5px rgb(50, 50, 50);
 }
 
 .wrapper{
-  box-shadow: 0 0 20px 5px rgb(100, 100, 100);
+  box-shadow: 0 0 20px 5px rgb(50, 50, 50);
 } 
 
 .wrapper > *{
@@ -62,7 +61,6 @@ span{
 
 .contact{
   background-color: rgb(0, 38, 109);
-  /* background-color: rgb(54, 105, 201); */
 }
 
 
@@ -88,30 +86,32 @@ span{
   grid-column: 1/3;
 }
 
- textarea{
+ #message{
   width: 100%;
-  border: 1px solid;
+  border: 2px solid;
+
 } 
  
-.contact form button, .contact form input {
+.contact form input{
   width: 100%;
   padding: 1.16em;
-  border: 1px solid;
+  border: 2px solid;
 } 
 
 .contact form button{
+  width: 100%;
   background: white;
   margin-top: 30px;
   padding: 0.5em;
   border: 0;
   text-transform: uppercase;
   color: rgb(53, 1, 36); 
-  border: 1px solid;
+  border: 0;
 }
 
 .contact form button:hover, .contact form button:focus{
-  /* background: rgb(48, 202, 151); */
-  background-color: rgb(137, 231, 238);
+  background-color: rgb(13, 161, 172);
+  color: white;
   outline: 0;
 }
 
